Upgrade both JDK and JRE requirements to Java 17