@@ -132,6 +132,8 @@
 
   <build>
     <plugins>
+
+      <!-- Enable Log4j plugin processing -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -145,6 +147,18 @@
           </annotationProcessorPaths>
         </configuration>
       </plugin>
+
+      <!-- Illegal access is disabled by default in Java 16 due to JEP-396.
+           We are relaxing it for tests. -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>--add-opens java.base/java.io=ALL-UNNAMED</argLine>
+        </configuration>
+      </plugin>
+
     </plugins>
   </build>
+
 </project>
